@@ -157,6 +157,7 @@ production.
   are disabled for user pages.
 * (bug 12205) Bidirectional names in action=credits are split and displayed
   incorrectly when wrapped to the next line.
+* (bug 120781) Move 'mainpagetext' messages to installer's .i18n file.
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
